# astro-calc

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  engine.py  main.py  mappers.py  schemas.py  svg.py
docs/: golden-fixtures.md
scripts/: gen_fixtures.py  verify_fixtures.py
tests/: conftest.py  test_golden.py  test_health.py  test_natal.py  test_swiss_ephemeris_oracle.py
tests/fixtures/: kazan-1988.json  leningrad-1975.json  moscow-1993.json  newyork-2001.json  novosibirsk-1982.json
