[project]
name = "astro-calc"
version = "1.0.1"
description = "Birth data in, structured astrological facts + SVG wheel out. A stateless ephemeris microservice built on kerykeion / Swiss Ephemeris."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "kerykeion>=5,<6",
    "pyswisseph>=2.10.3.2,<3",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
